# WPG-Assessment

./: .gitignore  README.md  pyproject.toml
src/belief_module/: Task3Option2.md  grid.py  main.py  updater.py
src/orchestration/: listener.py  main.py  pipelines.py
src/shared/: models.py
tests/: test_belief_module.py  test_integration.py  test_listener.py  test_pipelines.py
