[project]
name = "assessment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.13.3",
]

[dependency-groups]
belief = [
    "numpy>=2.4.4",
    "scipy>=1.17.1",
]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
orchestration = [
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "uvicorn>=0.46.0",
]
